cmake_minimum_required (VERSION 3.8)

project ("NACCLIENT")


list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/GCR_CMake/macros)
include (GlibCompileResourcesSupport)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)

INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS} ${CMAKE_SOURCE_DIR}/build/lib)
ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})

set(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/build/bin")
set(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/build/lib/nacclient/")

add_subdirectory ("src")
